# synthesthesia

./: .gitignore  CMakeLists.txt  adsr.hpp  cfg-envelope.hpp  config.hpp  key.cpp  key.hpp  logger.hpp  makefile  modulator-env.cpp  modulator-lfo.cpp  modulator-type.hpp  oscillator.cpp  oscillator.hpp  port-info.hpp  synthesthesia-ui.cpp.old  synthesthesia-ui.hpp  synthesthesia.cpp  synthesthesia.ttl  waveform.hpp
src/: ADSREnvelope.cpp  ADSREnvelope.hpp  BMap.hpp  ControlPortManager.cpp  ControlPortManager.hpp  Detune.cpp  Detune.hpp  Detuner.cpp  Detuner.hpp  Filter.cpp  Filter.hpp  Filter.hpp.wait  FilterType.hpp  IO.hpp  KeyboardController.cpp  KeyboardController.hpp  LFO.cpp  LFO.hpp  LinearFader.hpp  MidiModule.hpp  MidiNote.cpp  MidiNote.hpp  ModulationChain.hpp  ModulationController.cpp  ModulationController.hpp  ModulationParameter.hpp  ModulationSource.hpp  Modulator.hpp  ModulatorType.hpp  Module.hpp  ModuleType.hpp  Note.cpp  Note.hpp  NoteInfo.hpp  Oscillator.cpp  Oscillator.hpp  Parameter.hpp  ParameterBase.hpp  ParameterController.hpp  ParameterType.hpp  (+52 more)
src/ui-x11/: get-project-path.hpp  main.cpp  synthesthesia-ui.cpp  synthesthesia-ui.hpp  test  test.cpp  ui-config.hpp  ui-envelope.cpp  ui-envelope.hpp  ui-filter.cpp  ui-filter.hpp  ui-lfo.cpp  ui-lfo.hpp  ui-object.cpp  ui-object.hpp  ui-oscillator.cpp  ui-oscillator.hpp  ui-port-handler.cpp  ui-port-handler.hpp  ui-waveform.cpp  ui-waveform.hpp
test/: extract_sound.cpp  key-test.cpp  key-test.hpp  main.cpp  makefile  oscillator-base-test.cpp  oscillator-base-test.hpp  test-adsr-envelope.hpp  test-key.hpp
